Fix high contrast

--- a/theme/style.less
+++ b/theme/style.less
@@ -73,7 +73,7 @@
     color: @white;
 }
 
-.header-actions .ui.button:not(.red) {
+.dimmable:not(.hc) .header-actions .ui.button:not(.red) {
     color: @black!important;
 }
 
